Fix title alignment. Adjust photo width. Add description to about us section. Link about us nav to its id

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ main {
 
 div.section-title-container {
     padding: 34px 20px;
-    background-color: #f9cf00;
+    background-color: rgb(243, 219, 130);
     margin-left: 0;
     margin-right: 0;
 }
@@ -148,6 +148,7 @@ h2.nested {
     display: flex;
     text-align: center;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 h2.nested::before {
@@ -171,9 +172,13 @@ div.picholder {
 }
 
 .section-image {
-    width: 304px;
+    width: 100%;
     height: auto;
     object-fit: cover;
+}
+
+p.description {
+    text-align: center;
 }
 
 /* Footer */
@@ -189,7 +194,7 @@ div.picholder {
 #social-networks i {
     font-size: 160%;
     padding: 5%;
-    color: #4484ce;
+    color: #010463;
 }
 
 /* media query: tablets and larger (768px and larger) */
